src/test/ui/chalkify/closure.stderr
error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:7:5
   |
LL |     t();
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:13:5
   |
LL |     b();
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:17:5
   |
LL |     c();
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:18:5
   |
LL |     b();
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:24:5
   |
LL |     b();
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:28:5
   |
LL |     c();
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error[E0277]: `()` is not a tuple
  --> $DIR/closure.rs:29:5
   |
LL |     b(); // FIXME: reenable when this is fixed ~ ERROR
   |     ^^^ the trait `Tuple` is not implemented for `()`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn main() -> () where (): Tuple {
   |                 +++++++++++++++

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
